--- a/package.json
+++ b/package.json
@@ -13,20 +13,16 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
-    "postgres": "^3.4.3",
+    "@supabase/supabase-js": "^2.38.4",
     "lucide-react": "^0.294.0",
     "chart.js": "^4.4.0",
     "react-chartjs-2": "^5.2.0",
-    "date-fns": "^2.30.0",
-    "jsonwebtoken": "^9.0.2",
-    "bcryptjs": "^2.4.3"
+    "date-fns": "^2.30.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.5",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
